# VELTAIR_ASPLOS22

./: CMakeLists.txt  readme.md
configs/: Background.config  Bert.config  EfficientNet.config  GoogLeNet.config  MobileNet.config  ResNet18.config  ResNet50.config  VGG19.config  tinyyolo.config
include/: layer.hpp  request.hpp  task.hpp  utils.hpp
prof_output/: GoogLeNet.out  ResNet50.out
script/: analyze_conflict.py
src/: Veltair.cpp  Veltair_Engine.cpp  Veltair_Engine_New.cpp
