cmake_minimum_required(VERSION 3.13)
project(Veltair)
find_package(MPI REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O0 -g -pthread -mavx2 -w -g -lm")
set(TVM_HOME "/mnt/d/tvm")

include_directories("include")
include_directories("${TVM_HOME}/include")
include_directories("${TVM_HOME}/3rdparty/dmlc-core/include")
include_directories("${TVM_HOME}/3rdparty/dlpack/include")
# include_directories("/home/zhliu/workspace/BLAS/OpenBLAS/include")
link_directories("${TVM_HOME}/build")
# link_directories("/home/zhliu/workspace/BLAS/OpenBLAS/lib")
add_executable(Veltair src/Veltair_Engine.cpp)
target_link_libraries(Veltair tvm tvm_runtime pthread MPI::MPI_CXX)
